# FlowAnalysis

./: .clang-format  CMakeLists.txt  LICENSE  README.md  generate_large_noc.py
.github/workflows/: ci.yml
data/: noc_config.json
src/: NoC.cpp  NoC.hpp  main.cpp
